--- a/S14-BlazorUI/Layout/MainLayout.razor
+++ b/S14-BlazorUI/Layout/MainLayout.razor
@@ -5,8 +5,7 @@
     </div>
 
     <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
+        <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
