--- a/S14-BlazorUI/Pages/Home.razor
+++ b/S14-BlazorUI/Pages/Home.razor
@@ -1,7 +1,9 @@
-﻿@page "/"
+﻿@namespace S14_BlazorUI.Pages
+@page "/"
+@using S14_BlazorUI
 
-<PageTitle>Home</PageTitle>
+<AcademicClassesGrid />
 
-<h1>Hello, world!</h1>
+@code {
 
-Welcome to your new app.
+}
