--- a/S14-BlazorUI/_Imports.razor
+++ b/S14-BlazorUI/_Imports.razor
@@ -7,4 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using S14_BlazorUI
-@using S14_BlazorUI.Layout
+@using S14_BlazorUI.Components
+@using S14_BlazorUI.Models
+@using S14_BlazorUI.Services
